@@ -4,6 +4,9 @@ Revision history for DBIx::Class
     * Fixes
         - Correctly recognize root source unqualified columns when
           resolving right-side ordered limited prefetch
+        - Stop Sybase ASE storage from generating invalid SQL in subselects
+          when a limit without offset is encountered
+
 
 0.08210 2013-04-04 15:30 (UTC)
     * New Features / Changes
